add category and products, refactor header style

--- a/src/app/header-nav/header-nav.component.html
+++ b/src/app/header-nav/header-nav.component.html
@@ -14,10 +14,16 @@
           </ul>
         </div>
         <div class="navbar-container content">
+
           <div class="collapse navbar-collapse" id="navbar-mobile">
             <ul class="nav navbar-nav mr-auto float-left">
               <li class="nav-item d-none d-md-block"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i
                     class="ft-menu"></i></a>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav mr-auto">
+              <li class="text-center mt-1">
+                <h3 style="color: #ffff;">{{shopDetails.name}} - {{shopDetails.address}}, {{shopDetails.city}}</h3>
               </li>
             </ul>
             <ul class="nav navbar-nav float-right">
