--- a/src/assets/css-rtl/colors.css
+++ b/src/assets/css-rtl/colors.css
@@ -3368,7 +3368,7 @@ input:focus~.bg-info {
 }
 
 .bg-info {
-  background-color: #5DB585 !important;
+  background-color: #d2722d !important
 }
 
 .bg-info .card-header,
