--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -2005,7 +2005,7 @@ body.vertical-layout.vertical-menu.menu-expanded .main-menu-footer .content {
 }
 
 .avatar-online i {
-  background-color: #F1830E;
+  background-color: #5DB585;
 }
 
 .avatar-off i {
