--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
       <div class="main-menu-content">
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
           <li class="active">
-            <a routerLink="/adminDashboard"><i class="la la-home"></i><span class="menu-title" data-i18n="">Admin
+            <a routerLink="/adminDashboard"><i class="la la-home"></i><span class="menu-title" data-i18n="">Shop Admin
                 Dashboard</span>
             </a>
           </li>
@@ -10,14 +10,14 @@
               class="la la-ellipsis-h" data-toggle="tooltip" data-placement="right"
               data-original-title="Professional"></i>
           </li>
-          <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/shopsInsight')}">
+          <!-- <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/shopsInsight')}">
             <a routerLink="/shopsInsight/pages/1">
               <i class="la la-opencart"></i>
               <span class="menu-title" data-i18n="">
                 Shop(s) Insights
               </span>
             </a>
-          </li>
+          </li> -->
           <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/product')}">
             <a routerLink="/product-category-dashboard">
               <i class="la la-list"></i>
@@ -28,46 +28,46 @@
           </li>
 
 
-          <li class=" nav-item"><a routerLink="/ordersInsight/pages/1"><i class="la la-shopping-cart"></i><span
+          <!-- <li class=" nav-item"><a routerLink="/ordersInsight/pages/1"><i class="la la-shopping-cart"></i><span
                 class="menu-title" data-i18n="">Orders</span></a>
-          </li>
+          </li> -->
 
           <li class=" nav-item"><a (click)="handleProductNav()"><i class="la la-upload"></i><span class="menu-title"
                 data-i18n="">Bulk Upload Products
               </span></a>
           </li>
 
-          <ng-container *ngIf="isAdminUser">
-            <li class=" navigation-header"><span data-i18n="nav.category.apps">Users Insights</span><i
-                class="la la-ellipsis-h" data-toggle="tooltip" data-placement="right" data-original-title="Apps"></i>
-            </li>
-            <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/adminUserInsight/add')}">
-              <a routerLink="/adminUserInsight/add"><i class="la la-user-plus"></i><span class="menu-title"
-                  data-i18n="">Add
-                  User</span></a>
-            </li>
-            <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/adminUserInsight/pages')}">
-              <a routerLink="/adminUserInsight/pages/1"><i class="la la-users"></i><span class="menu-title"
-                  data-i18n="">View Users
-                </span></a>
-            </li>
-          </ng-container>
+
+          <li class=" navigation-header"><span data-i18n="nav.category.apps">Users Insights</span><i
+              class="la la-ellipsis-h" data-toggle="tooltip" data-placement="right" data-original-title="Apps"></i>
+          </li>
+          <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/adminUserInsight/add')}">
+            <a routerLink="/adminUserInsight/add"><i class="la la-user-plus"></i><span class="menu-title"
+                data-i18n="">Add
+                User</span></a>
+          </li>
+          <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/adminUserInsight/pages')}">
+            <a routerLink="/adminUserInsight/pages/1"><i class="la la-users"></i><span class="menu-title"
+                data-i18n="">View Users
+              </span></a>
+          </li>
+
 
           <li class=" navigation-header"><span data-i18n="nav.category.ui">Admin Controls</span><i
               class="la la-ellipsis-h" data-toggle="tooltip" data-placement="right"
               data-original-title="User Interface"></i>
           </li>
 
-          <ng-container *ngIf="isAdminUser">
 
 
-            <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/settings')}">
-              <a routerLink="/settings/dashboard"><i class="ft-settings icon-left"></i>
-                <span class="menu-title" data-i18n="">Settings
-                </span>
-              </a>
-            </li>
-          </ng-container>
+
+          <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/settings')}">
+            <a routerLink="/settings/dashboard"><i class="ft-settings icon-left"></i>
+              <span class="menu-title" data-i18n="">Settings
+              </span>
+            </a>
+          </li>
+
 
           <ng-container *ngIf="false">
             <li class=" nav-item"><a><i class="la la-bell-o"></i><span class="menu-title"
