--- a/src/app/products/list-category/list-category.component.html
+++ b/src/app/products/list-category/list-category.component.html
@@ -26,7 +26,7 @@
 
 
                      <div class="heading-elements">
-                       <a (click)="handleAddNavigation()" class="btn btn-warning round btn-sm"><i
+                       <a (click)="handleAddNavigation()" class="btn btn-success round btn-sm" style="color: white;"><i
                            class="la la-plus font-small-2"></i>
                          Add Category
                        </a>
