--- a/src/app/products/product-category-dashboard/product-category-dashboard.component.html
+++ b/src/app/products/product-category-dashboard/product-category-dashboard.component.html
@@ -33,7 +33,7 @@
              <div class="card pull-up">
                <div class="card-content">
                  <div class="card-body text-center" style="padding:2em; cursor: pointer;"
-                   routerLink="/productInsight/categories/pages/1">
+                   routerLink="/categoryInsight/pages/1">
                    <div class="">
                      <div class="mb-1">
                        <i class="la la-list-alt font-large-2 warning"></i>
@@ -76,7 +76,7 @@
              <div class="card pull-up">
                <div class="card-content">
                  <div class="card-body text-center" style="padding:2em; cursor: pointer;"
-                   routerLink="/productInsight/category/add">
+                   routerLink="/categoryInsight/add">
                    <div class="">
                      <div class="mb-1">
                        <i class="la la-dashcube font-large-2 danger"></i>
