--- a/src/app/admins/add-admin/add-admin.component.html
+++ b/src/app/admins/add-admin/add-admin.component.html
@@ -64,9 +64,7 @@
                      <label for="sku">Role: <span class="text-danger">*</span></label>
                      <select class="form-control" name="role" [(ngModel)]="adminUser.role" required>
                        <option value="">Select Role</option>
-                       <option value="lister">Lister</option>
-                       <option value="shopper">Shopper</option>
-                       <option value="shop_assistant">Shop Assistant</option>
+                       <option value="editor">Editor</option>
                        <option value="admin">Admin</option>
                      </select>
                    </div>
