--- a/src/app/products/add-product/add-product.component.html
+++ b/src/app/products/add-product/add-product.component.html
@@ -33,7 +33,7 @@
                      <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
                    </div>
                    <div class="col-md-2">
-                     <button class="btn btn-sm btn-blue-grey" routerLink="/productInsight/category/add"
+                     <button class="btn btn-sm btn-blue-grey" routerLink="/categoryInsight/add"
                        style="float: right;">Create Category ?</button>
                    </div>
                  </div>
