--- a/src/app/settings/settings-dasboard/settings-dasboard.component.html
+++ b/src/app/settings/settings-dasboard/settings-dasboard.component.html
@@ -7,7 +7,7 @@
          </div>
 
          <div class="row" style="margin-top: 3em;">
-           <div class="col-xl-4 col-lg-6 col-md-6 col-12 offset-1">
+           <!-- <div class="col-xl-4 col-lg-6 col-md-6 col-12 offset-1">
              <div class="card pull-up">
                <div class="card-content">
                  <div class="card-body text-center" style="padding:2em; cursor: pointer;"
@@ -23,8 +23,8 @@
                  </div>
                </div>
              </div>
-           </div>
-           <div class="col-xl-4 col-lg-6 col-md-6 col-12 offset-2">
+           </div> -->
+           <div class="col-xl-4 col-lg-6 col-md-6 col-12 offset-3">
              <div class="card pull-up">
                <div class="card-content">
                  <div class="card-body text-center" style="padding:2em; cursor: pointer;"
