--- a/src/app/admins/view-admin/view-admin.component.html
+++ b/src/app/admins/view-admin/view-admin.component.html
@@ -56,9 +56,7 @@
                        <label for="sku">Role: <span class="text-danger">*</span></label>
                        <select class="form-control" name="role" [(ngModel)]="userDetails.role" required>
                          <option value="">Select Role</option>
-                         <option value="lister">Lister</option>
-                         <option value="shopper">Shopper</option>
-                         <option value="shop_assistant">Shop Assistant</option>
+                         <option value="editor">editor</option>
                          <option value="admin">Admin</option>
                        </select>
                      </div>
