add other features - token, roleview-orders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-  <div *ngIf="!loginRegisterUrl; else loginRegisterPage">
+  <div *ngIf="!loginRegisterResetPwdUrl; else loginRegisterPage">
     <!-- BEGIN: Header-->
     <app-header-nav></app-header-nav>
     <!-- END: Header-->
