--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -33,25 +33,32 @@
                 data-i18n="">Categories</span></a>
           </li>
 
-          <li class=" nav-item"><a (click)="handleProductNav()"><i class="la la-upload"></i><span class="menu-title"
-                data-i18n="">Bulk Upload Products
+          <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/ordersInsight')}"><a
+              routerLink="/ordersInsight/pages/1"><i class="la la-shopping-cart"></i><span class="menu-title"
+                data-i18n="">Orders</span></a>
+          </li>
+
+          <li *ngIf="genServ.permissionRole | async" class=" nav-item"><a (click)="handleProductNav()"><i
+                class="la la-upload"></i><span class="menu-title" data-i18n="">Bulk Upload Products
               </span></a>
           </li>
 
 
-          <li class=" navigation-header"><span data-i18n="nav.category.apps">Users Insights</span><i
-              class="la la-ellipsis-h" data-toggle="tooltip" data-placement="right" data-original-title="Apps"></i>
-          </li>
-          <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/adminUserInsight/add')}">
-            <a routerLink="/adminUserInsight/add"><i class="la la-user-plus"></i><span class="menu-title"
-                data-i18n="">Add
-                User</span></a>
-          </li>
-          <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/adminUserInsight/pages')}">
-            <a routerLink="/adminUserInsight/pages/1"><i class="la la-users"></i><span class="menu-title"
-                data-i18n="">View Users
-              </span></a>
-          </li>
+          <ng-container *ngIf="genServ.permissionRole | async">
+            <li class=" navigation-header"><span data-i18n="nav.category.apps">Users Insights</span><i
+                class="la la-ellipsis-h" data-toggle="tooltip" data-placement="right" data-original-title="Apps"></i>
+            </li>
+            <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/adminUserInsight/add')}">
+              <a routerLink="/adminUserInsight/add"><i class="la la-user-plus"></i><span class="menu-title"
+                  data-i18n="">Add
+                  User</span></a>
+            </li>
+            <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/adminUserInsight/pages')}">
+              <a routerLink="/adminUserInsight/pages/1"><i class="la la-users"></i><span class="menu-title"
+                  data-i18n="">View Users
+                </span></a>
+            </li>
+          </ng-container>
 
 
           <li class=" navigation-header"><span data-i18n="nav.category.ui">Admin Controls</span><i
@@ -60,21 +67,6 @@
           </li>
 
 
-
-
-          <li class=" nav-item" [ngClass]="{'active open': (url | async )?.includes('/settings')}">
-            <a routerLink="/settings/dashboard"><i class="ft-settings icon-left"></i>
-              <span class="menu-title" data-i18n="">Settings
-              </span>
-            </a>
-          </li>
-
-
-          <ng-container *ngIf="false">
-            <li class=" nav-item"><a><i class="la la-bell-o"></i><span class="menu-title"
-                  data-i18n="nav.components.main">Notifications</span></a>
-            </li>
-          </ng-container>
 
           <li class=" nav-item"><a routerLink="/admin-user-profile"><i class="la la-user-secret"></i><span
                 class="menu-title" data-i18n="nav.pages.main">Profile</span></a>
