--- a/src/app/orders/list-orders/list-orders.component.html
+++ b/src/app/orders/list-orders/list-orders.component.html
@@ -6,15 +6,49 @@
                <div class="col-12">
                  <div class="card">
                    <div class="card-header">
-                     <h2 class="card-title">CATEGORY LIST By Shops</h2>
+                     <h2 class="card-title">Order List </h2>
+                     <div class="heading-elements">
+                       <ul class="list-inline mb-0">
+                         <li>
+                           <a class="btn btn-sm box-shadow-2 round btn-min-width pull-right"
+                             style="color:white!important;"
+                             [ngClass]="{'btn-danger': filterStatus === 'Activate', 'btn-success': filterStatus === 'Deactivate'}"
+                             (click)="handleDateFilterActivation()">{{filterStatus}} Date Filter
+                           </a>
+                         </li>
+                       </ul>
+                     </div>
+                     <!-- By Shops -->
 
                      <div class="row">
                        <div class="col-md-6">
-                         <mat-form-field style="border-bottom:1px solid; width: 50% !important; margin: 4em 0 0 0;">
+                         <mat-form-field style="border-bottom:1px solid; width: 50% !important; margin: 4em 0 0 0;"
+                           *ngIf="filterStatus === 'Activate'; else dateFilter;">
                            <input matInput (keyup)="applyFilter($event.target.value)"
                              (focus)="hidShowPlaceHolder($event.target.value, 'onFocus')"
                              (blur)="hidShowPlaceHolder($event.target.value, 'onBlur')" placeholder="{{myplaceHolder}}">
                          </mat-form-field>
+                         <ng-template #dateFilter>
+                           <div class="ml-2" style="margin: 4em 0 0 0;">
+                             <span>
+                               <label for="from" class="mr-1"> From: </label>
+                               <mat-form-field style="border-bottom:1px solid; width: 30% !important;">
+                                 <input type="date" #dateFrom matInput
+                                   (change)="handleDateFilter(dateFrom.value, 'from')">
+                               </mat-form-field>
+                             </span>
+
+                             <span class="ml-1">
+                               <label for="to" class="mr-1"> To: </label>
+                               <mat-form-field style=" border-bottom:1px solid; width: 30% !important;">
+                                 <input type="date" #dateTo matInput (change)="handleDateFilter(dateTo.value, 'to')">
+                               </mat-form-field>
+                             </span>
+                           </div>
+
+
+
+                         </ng-template>
                        </div>
 
                        <div class="col-md-6">
@@ -25,11 +59,8 @@
                      </div>
 
 
-                     <div class="heading-elements" *ngIf="genServ.permissionRole | async">
-                       <a (click)="handleAddNavigation()" class="btn btn-success round btn-sm" style="color: white;"><i
-                           class="la la-plus font-small-2"></i>
-                         Add Category
-                       </a>
+                     <div class="heading-elements">
+
                      </div>
 
 
@@ -44,37 +75,45 @@
                            <div class="table-responsive">
 
                              <table class="table table-striped table-bordered Products-list"
-                               *ngIf="dataSourceCategories.length !== 0; else noItems;">
+                               *ngIf="dataSource.length !== 0; else noItems;">
                                <thead>
                                  <tr>
-                                   <th>Index</th>
-                                   <!-- <th>Shop Name</th> -->
-                                   <th>Category Name</th>
-                                   <th>Slug</th>
-                                   <th>Image</th>
+                                   <th>No</th>
+                                   <th>Customer</th>
+                                   <th>Shop</th>
+                                   <th>Ref No</th>
+                                   <th>Amount</th>
+                                   <th>Paid?</th>
+                                   <th>Delivery</th>
                                    <th>Action</th>
                                  </tr>
                                </thead>
                                <tbody>
-                                 <tr *ngFor="let data of dataSourceCategories; let i = index;">
+                                 <tr *ngFor="let data of dataSource; let i = index;">
                                    <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">
-                                     {{i + paginationUrl.viewCountStart}}</td>
-
-                                   <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">
-                                     {{data.name}}</td>
-                                   <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">
-                                     {{data.slug}}</td>
-
-                                   <td *ngIf="data.image; else noImage">
-                                     <a [href]="data.image" target="_blank">Click to view</a>
+                                     {{i + paginationUrl.viewCountStart}}
                                    </td>
-                                   <ng-template #noImage>
-                                     <td>No Image</td>
+                                   <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">
+                                     {{data.user.full_name}}</td>
+                                   <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">
+                                     {{data.shop.name}}</td>
+                                   <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">
+                                     {{data.reference}}</td>
+                                   <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">
+                                     {{data.grand_total | currency : 'N '}}
+                                   </td>
+                                   <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;"
+                                     *ngIf="data.payment_status; else notPaid">
+                                     Paid
+                                   </td>
+                                   <ng-template #notPaid>
+                                     <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">Not Paid
+                                     </td>
                                    </ng-template>
-                                   <td><a (click)="handleNavigationView(data.uuid)"><i
-                                         class="ft-edit text-success"></i></a>
-                                     <a (click)="handleShopDelete(data.uuid)"><i
-                                         class="ft-trash-2 ml-1 text-warning"></i></a>
+                                   <td (click)="handleNavigationView(data.uuid)" style="cursor: pointer;">
+                                     {{data.delivery_time | date: 'longDate'}}</td>
+
+                                   <td><a (click)="handleNavigationView(data.uuid)" style="color: #00BCD4;">view</a>
                                    </td>
                                  </tr>
 
@@ -85,6 +124,7 @@
 
                              <ng-template #noItems>
                                <mat-card class="text-center">No Items Available
+
                                </mat-card>
                              </ng-template>
 
