--- a/src/app/products/list-product/list-product.component.html
+++ b/src/app/products/list-product/list-product.component.html
@@ -42,7 +42,7 @@
 
 
 
-                     <div class="heading-elements">
+                     <div class="heading-elements" *ngIf="genServ.permissionRole | async">
                        <button class="btn btn-success round btn-sm dropdown-toggle" type="button"
                          id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                          <i class="la la-plus font-small-2"></i>
@@ -78,7 +78,7 @@
                          <div class="row match-height">
                            <div class="table-responsive">
                              <table class="table table-striped table-bordered Products-list"
-                               *ngIf="dataSourceProducts.length !== 0; else noItems">
+                               *ngIf="dataSourceProducts.length !== 0; else noItems;">
                                <thead>
                                  <tr>
                                    <th>Index</th>
@@ -93,7 +93,7 @@
                                  </tr>
                                </thead>
                                <tbody>
-                                 <tr *ngFor="let product of dataSourceProducts;let i = index">
+                                 <tr *ngFor="let product of dataSourceProducts;let i = index;">
                                    <td (click)="handleNavigationView(product.uuid, 'view')" style="cursor: pointer;">
                                      {{i + paginationUrl.viewCountStart}}</td>
                                    <td (click)="handleNavigationView(product.uuid, 'view')" style="cursor: pointer;">
